--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: node_js
 node_js:
-  - 4
+  - '0.6'
+  - '0.8'
+  - '0.10'
+  - '0.12'
+  - '1.8'
+  - '2.5'
+  - '3.3'
+  - '4.2.0' # Test timers regression
+  - '4.4'
+  - '5.11'
+  - '6.2'
 
 sudo: false
 
@@ -10,17 +20,16 @@ notifications:
 cache:
   directories:
     - node_modules
-    - jspm_packages
 
+services:
+  - mysql
 install:
   - npm install
-  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
-  - node_modules/.bin/jspm install
 
 before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - mysql -e 'create database db_recontime;'
 
 script:
 - npm run ci
