--- a/ReconTime/ReconTime/ReconTime.csproj
+++ b/ReconTime/ReconTime/ReconTime.csproj
@@ -63,7 +63,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TimeWriter.cs" />
+    <Compile Include="DBConnection.cs" />
     <Compile Include="EmployeeReader.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
